alignment fixed

--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@ box-shadow: 0 0 4px rgb(48, 48, 48);}
 
     width: auto;
     height: auto;
-    margin-left: 8%;
-    margin-right: 10%;
+    margin-left: 6%;
+    margin-right: 7%;
     margin-bottom: 6%;
     
     border-radius: 20px;
